[Bug #164927648] Remove extra white space
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -18,7 +18,7 @@
 }
 @media screen and (max-width: 630px){
 body{
-  position: fixed;
+  width: 100vw;
   overflow-x: hidden;
   }
 }
